<resources>
    <string name="app_name">prCloseChat_Android</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_app">Close Chat</string>
    <string name="email">Email</string>
    <string name="fullname">Full Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="join_now">Join Now</string>
</resources>
